<resources>
    <string name="app_name">TimerSpeaker</string>
    <string name="max_time_title">いつまではしる？:</string>
    <string name="interval_time_title">おしらせのじかんは？:</string>
    <string name="config_title">くるまとじかんのせってい</string>
    <string name="cars">どのくるまに\nしようかな</string>
    <string name="interval">なんふん\nごとにはなす</string>
    <string name="max_time">さいだい\nなんじかん</string>
    <string name="theme">はいけいは\nしろかくろ</string>
    <string name="white">しろ</string>
    <string name="black">くろ</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="config">Setting</string>
    <string name="info">音声合成ソフトを入れてください</string>
    <string name="info2">英語でカウントします</string>
    <string name="info3">日本語も英語もダメです</string>
    <string name="info4">音声ソフト死んでます</string>
    <string name="lang_jp">分</string>
    <string name="lang_en">minute</string>
    <string name="start_jp">スタート</string>
    <string name="one_seconds">一秒</string>
    <string name="per_one_seconds">一秒ごと</string>
    <string name="five_minute">5分</string>
    <string name="one_hundred_seconds">百秒</string>
    <string name="per_minute">分ごと</string>
    <string name="seconds">秒</string>
    <string name="hours">時間</string>

</resources>
