<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.co.nirvana0rigin.timerspeaker.Config">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:id="@+id/style_config"
        style="@style/theme1">

        <TextView
            style="@style/config_title"
            android:text="@string/config_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center_vertical|left">

            <TextView
                style="@style/choice_title"
                android:text="@string/cars" />

            <FrameLayout style="@style/choice">

                <ImageView
                    style="@style/choice_button"
                    android:src="@drawable/choice"
                    android:id="@+id/car1b" />

                <ImageView
                    style="@style/choice_image"
                    android:src="@drawable/c01"
                    android:id="@+id/car1" />

            </FrameLayout>

            <FrameLayout style="@style/choice">

                <ImageView
                    style="@style/choice_button"
                    android:src="@drawable/choice"
                    android:id="@+id/car2b" />

                <ImageView
                    style="@style/choice_image"
                    android:src="@drawable/c02"
                    android:id="@+id/car2" />
            </FrameLayout>

            <FrameLayout style="@style/choice">

                <ImageView
                    style="@style/choice_button"
                    android:src="@drawable/choice"
                    android:id="@+id/car3b" />

                <ImageView
                    style="@style/choice_image"
                    android:src="@drawable/c03"
                    android:id="@+id/car3" />
            </FrameLayout>

            <FrameLayout style="@style/choice">

                <ImageView
                    style="@style/choice_button"
                    android:src="@drawable/choice"
                    android:id="@+id/car4b" />

                <ImageView
                    style="@style/choice_image"
                    android:src="@drawable/c04"
                    android:id="@+id/car4" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center_vertical|left">

            <TextView
                style="@style/choice_title"
                android:text="@string/interval" />

            <Button
                style="@style/choice_button"
                android:background="@drawable/choice"
                android:text="1"
                android:id="@+id/interval1" />

            <Button
                style="@style/choice_button"
                android:background="@drawable/choice"
                android:text="3"
                android:id="@+id/interval3" />

            <Button
                style="@style/choice_button"
                android:background="@drawable/choice"
                android:text="5"
                android:id="@+id/interval5" />

            <Button
                style="@style/choice_button"
                android:background="@drawable/choice"
                android:text="10"
                android:id="@+id/interval10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center_vertical|left">

            <TextView
                style="@style/choice_title"
                android:text="@string/max_time" />

            <Button
                style="@style/choice_button"
                android:background="@drawable/choice"
                android:text="1"
                android:id="@+id/hours1" />

            <Button
                style="@style/choice_button"
                android:background="@drawable/choice"
                android:text="2"
                android:id="@+id/hours2" />

            <Button
                style="@style/choice_button"
                android:background="@drawable/choice"
                android:text="3"
                android:id="@+id/hours3" />

            <Button
                style="@style/choice_button"
                android:background="@drawable/choice"
                android:text="5"
                android:id="@+id/hours5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center_vertical|left">

            <TextView
                style="@style/choice_title"
                android:text="@string/theme" />

            <Button
                style="@style/choice_button"
                android:background="@drawable/choice"
                android:text="@string/black"
                android:id="@+id/theme1" />

            <Button
                style="@style/choice_button"
                android:background="@drawable/choice"
                android:text="@string/white"
                android:id="@+id/theme2" />


        </LinearLayout>

    </LinearLayout>

</FrameLayout>
